fix modal shifting

--- a/public/stylesheets/sass/homepage.scss
+++ b/public/stylesheets/sass/homepage.scss
@@ -4,6 +4,7 @@
     overflow-y: auto;
 }
 
+html { overflow-y: scroll; }
 
 // button.close {
 //   width: 2em;
@@ -125,6 +126,7 @@ body {
 
 body.my-modal-open {
   padding-right: 0px;
+  padding-right: 0 !important
 }
 
 body.my-modal-open {
@@ -134,6 +136,7 @@ body.my-modal-open {
 
 body.modal-open {
   padding-right: 0px;
+  padding-right: 0 !important
 }
 
 body.modal-open {
